--- a/AZDORestApiExplorer.Build/Presentation/Views/BuildChangeMain.xaml
+++ b/AZDORestApiExplorer.Build/Presentation/Views/BuildChangeMain.xaml
@@ -1,8 +1,8 @@
 <vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.Git.Presentation.Views.PullRequestAttachmentMain"
+    x:Class="AZDORestApiExplorer.Build.Presentation.Views.BuildChangeMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:prism="http://www.codeplex.com/prism"
+
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 
@@ -13,12 +13,14 @@
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
 
+        xmlns:prism="http://www.codeplex.com/prism"
+    
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.Core"
     xmlns:vncazdopv="clr-namespace:AZDORestApiExplorer.Presentation.Views;assembly=AZDORestApiExplorer.Presentation"
     
-    xmlns:local="clr-namespace:AZDORestApiExplorer.Git.Presentation.Views"
+    xmlns:local="clr-namespace:AZDORestApiExplorer.Build.Presentation.Views"
 
-    xmlns:views="clr-namespace:AZDORestApiExplorer.Git.Presentation.Views"
+    xmlns:views="clr-namespace:AZDORestApiExplorer.Build.Presentation.Views"
 
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d"
@@ -51,20 +53,28 @@
             ScrollViewer.CanContentScroll="True"
             ScrollViewer.HorizontalScrollBarVisibility="Auto"
             ScrollViewer.VerticalScrollBarVisibility="Auto">
-
-            <dxg:GridColumn FieldName="pullRequestId" />
-            <dxg:GridColumn FieldName="title" />
-            <dxg:GridColumn FieldName="description" />
-            <dxg:GridColumn FieldName="codeReviewId" />
-            <dxg:GridColumn FieldName="status" />
-            <dxg:GridColumn FieldName="createdBy.uniqueName" />
-            <dxg:GridColumn FieldName="creationDate" Header="Creation Date" />
-
+                    
+            <dxg:GridColumn FieldName="id" Header="id" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="message" Header="Message" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="type" Header="Type" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="author.displayName" Header="Author" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="timestamp" Header="Date" Width="150">
+                <dxg:GridColumn.EditSettings>
+                    <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                </dxg:GridColumn.EditSettings>
+            </dxg:GridColumn>            
+            <!--<dxg:GridColumn FieldName="location" Header="Location" BestFitModeOnSourceChange="VisibleRows"/>-->
+            <dxg:GridColumn FieldName="pusher" Header="Pusher" BestFitModeOnSourceChange="VisibleRows"/>
+            
         </dxg:GridControl>
 
-                <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
-            <dxlc:LayoutItem Label="Url" >
-                <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
+        <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
+            <dxlc:LayoutItem Label="Uri" LabelHorizontalAlignment="Right" >
+                <dxe:TextEdit  Text="{Binding Results.SelectedItem.displayUri}" ToolTip="Paste into Browser to see Change" HorizontalAlignment="Stretch"/>
+            </dxlc:LayoutItem>
+
+            <dxlc:LayoutItem Label="Location" >
+                <dxe:TextEdit  Text="{Binding Results.SelectedItem.location}" ToolTip="Paste into Browser to see Change" />
             </dxlc:LayoutItem>
         </dxlc:LayoutGroup>
 
