--- a/AZDORestApiExplorer.Build/Presentation/Views/BuildInfoMain.xaml
+++ b/AZDORestApiExplorer.Build/Presentation/Views/BuildInfoMain.xaml
@@ -1,5 +1,5 @@
 <vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.Build.Presentation.Views.SettingMain"
+    x:Class="AZDORestApiExplorer.Build.Presentation.Views.BuildInfoMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://www.codeplex.com/prism"
@@ -13,6 +13,8 @@
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
 
+    xmlns:core="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
+    
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.Core"
     xmlns:vncazdopv="clr-namespace:AZDORestApiExplorer.Presentation.Views;assembly=AZDORestApiExplorer.Presentation"
     
@@ -45,30 +47,27 @@
                                     Count="{Binding Results.Count, Mode=TwoWay}"/>
 
         <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                    ItemsSource="{Binding Results.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
-
-            <dxg:GridColumn FieldName="daysToKeepDeletedBuildsBeforeDestroy" />
-            
-            <dxg:GridColumn FieldName="defaultRetentionPolicy.daysToKeep" />
-            <dxg:GridColumn FieldName="defaultRetentionPolicy.minimumToKeep" />
-            <dxg:GridColumn FieldName="defaultRetentionPolicy.deleteBuildRecord" />
-            <dxg:GridColumn FieldName="defaultRetentionPolicy.deleteTestResults" />
-            
-            <dxg:GridColumn FieldName="maximumRetentionPolicy.daysToKeep" />
-            <dxg:GridColumn FieldName="maximumRetentionPolicy.minimumToKeep" />
-            <dxg:GridColumn FieldName="maximumRetentionPolicy.deleteBuildRecord" />
-            <dxg:GridColumn FieldName="maximumRetentionPolicy.deleteTestResults" />
+            ItemsSource="{Binding Results.ResultItems}"
+            SelectedItem="{Binding Results.SelectedItem}"
+            FontSize="12"
+            ScrollViewer.CanContentScroll="True"
+            ScrollViewer.HorizontalScrollBarVisibility="Auto"
+            ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    
+            <dxg:GridColumn FieldName="id" Header="id" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="date" Header="Date" Width="150">
+                <dxg:GridColumn.EditSettings>
+                    <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                </dxg:GridColumn.EditSettings>
+            </dxg:GridColumn>
             
         </dxg:GridControl>
 
-        <dxe:TextEdit Grid.Row="2"
-            Text="{Binding Results.SelectedItem.url}"
-            TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+        <dxlc:LayoutGroup Grid.Row="2" Header="Selected Item Details" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" >
+            <dxlc:LayoutItem Label="Url" >
+                <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
+            </dxlc:LayoutItem>
+        </dxlc:LayoutGroup>
 
     </Grid>
 
