--- a/AZDORestApiExplorer.Build/Presentation/Views/BuildLogMain.xaml
+++ b/AZDORestApiExplorer.Build/Presentation/Views/BuildLogMain.xaml
@@ -1,5 +1,5 @@
 <vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.Git.Presentation.Views.PullRequestLabelMain"
+    x:Class="AZDORestApiExplorer.Build.Presentation.Views.BuildLogMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://www.codeplex.com/prism"
@@ -13,12 +13,14 @@
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
 
+    xmlns:core="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
+    
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.Core"
     xmlns:vncazdopv="clr-namespace:AZDORestApiExplorer.Presentation.Views;assembly=AZDORestApiExplorer.Presentation"
     
-    xmlns:local="clr-namespace:AZDORestApiExplorer.Git.Presentation.Views"
+    xmlns:local="clr-namespace:AZDORestApiExplorer.Build.Presentation.Views"
 
-    xmlns:views="clr-namespace:AZDORestApiExplorer.Git.Presentation.Views"
+    xmlns:views="clr-namespace:AZDORestApiExplorer.Build.Presentation.Views"
 
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d"
@@ -45,24 +47,30 @@
                                     Count="{Binding Results.Count, Mode=TwoWay}"/>
 
         <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                    ItemsSource="{Binding Results.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+            ItemsSource="{Binding Results.ResultItems}"
+            SelectedItem="{Binding Results.SelectedItem}"
+            FontSize="12"
+            ScrollViewer.CanContentScroll="True"
+            ScrollViewer.HorizontalScrollBarVisibility="Auto"
+            ScrollViewer.VerticalScrollBarVisibility="Auto">
 
-            <dxg:GridColumn FieldName="title" />
-            <dxg:GridColumn FieldName="description" />
-            <dxg:GridColumn FieldName="pullRequestId" />
-            <dxg:GridColumn FieldName="codeReviewId" />
-            <dxg:GridColumn FieldName="status" />
-            <dxg:GridColumn FieldName="createdBy.uniqueName" />
-            <dxg:GridColumn FieldName="creationDate" />
-            
+            <dxg:GridColumn FieldName="id" Header="id" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="type" Header="Type" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="lineCount" Header="LineCount" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="createdOn" Header="Created" Width="150">
+                <dxg:GridColumn.EditSettings>
+                    <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                </dxg:GridColumn.EditSettings>
+            </dxg:GridColumn>
+            <dxg:GridColumn FieldName="lastChangedOn" Header="Changed" Width="150">
+                <dxg:GridColumn.EditSettings>
+                    <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                </dxg:GridColumn.EditSettings>
+            </dxg:GridColumn>
+
         </dxg:GridControl>
 
-                <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
+        <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
             <dxlc:LayoutItem Label="Url" >
                 <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
             </dxlc:LayoutItem>
