--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestIterationMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestIterationMain.xaml
@@ -39,7 +39,6 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
-                <!--<RowDefinition Height="Auto" />-->
             </Grid.RowDefinitions>
 
             <vncazdopv:CommonGridHeader x:Name="commonGridHeaderIterations" Grid.Row="0" 
@@ -71,11 +70,12 @@
                 
             </dxg:GridControl>
 
-            <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding Results.SelectedItem.url}"
-                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
-
-            <!--<TextBlock Text="{Binding Message}" Grid.Row="3" />-->
+                    <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
+                <dxlc:LayoutItem Label="Url" >
+                    <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
+                </dxlc:LayoutItem>
+            </dxlc:LayoutGroup>
+            
         </Grid>
 
     </dxlc:LayoutGroup>
