--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
@@ -71,9 +71,12 @@
                         
                     </dxg:GridControl>
 
-                    <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding Results.SelectedItem.url}"
-                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
+                            <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
+                        <dxlc:LayoutItem Label="Url" >
+                            <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
+                        </dxlc:LayoutItem>
+                    </dxlc:LayoutGroup>
+                    
                 </Grid>
 
             </dxlc:LayoutGroup>
