--- a/AZDORestApiExplorer.Test/Presentation/Views/TestPlanMain.xaml
+++ b/AZDORestApiExplorer.Test/Presentation/Views/TestPlanMain.xaml
@@ -67,6 +67,12 @@
             <dxg:GridColumn FieldName="_links.clientUrl.href" />
         </dxg:GridControl>
 
+        <!--        <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
+            <dxlc:LayoutItem Label="Url" >
+                <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
+            </dxlc:LayoutItem>
+        </dxlc:LayoutGroup>-->
+
         <dxe:TextEdit Grid.Row="2"
             Text="{Binding Results.SelectedItem._links.clientUrl.href}"
             TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
