--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/FieldMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/FieldMain.xaml
@@ -71,8 +71,11 @@
 
         </dxg:GridControl>
 
-        <dxe:TextEdit Grid.Row="2" Text="{Binding Results.SelectedItem.url}"  
-                      TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+                <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
+            <dxlc:LayoutItem Label="Url" >
+                <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
+            </dxlc:LayoutItem>
+        </dxlc:LayoutGroup>
         
         <dxlc:LayoutGroup 
         	View="GroupBox" Orientation="Vertical" Grid.Row="3" Header="Supported Operations" >
