--- a/AZDORestApiExplorer.WorkItemTrackingProcess/Presentation/Views/SystemControlMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTrackingProcess/Presentation/Views/SystemControlMain.xaml
@@ -61,6 +61,12 @@
 
         </dxg:GridControl>
 
+                <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
+            <dxlc:LayoutItem Label="Url" >
+                <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
+            </dxlc:LayoutItem>
+        </dxlc:LayoutGroup>
+
     </Grid>
     
 </vncmvvm:ViewBase>
