--- a/AZDORestApiExplorer/Presentation/Views/Areas/Core/ProjectMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Areas/Core/ProjectMain.xaml
@@ -137,20 +137,30 @@
             ScrollViewer.HorizontalScrollBarVisibility="Auto"
             ScrollViewer.VerticalScrollBarVisibility="Auto">
             
-            <dxg:GridColumn FieldName="name" />
-            <dxg:GridColumn FieldName="description" />
+            <dxg:GridColumn FieldName="name" Width="150" />
+            <!--<dxg:GridColumn FieldName="description" />-->
             <dxg:GridColumn FieldName="lastUpdateTime" />
             <dxg:GridColumn FieldName="state" />
             <dxg:GridColumn FieldName="revision" />
             <dxg:GridColumn FieldName="visibility" />
-            <dxg:GridColumn FieldName="id" />
+            <!--<dxg:GridColumn FieldName="id" />-->
             <!--<dxg:GridColumn FieldName="url" />-->
             
         </dxg:GridControl>
 
-        <dxe:TextEdit Grid.Row="2" Text="{Binding Results.SelectedItem.url}"  
-                      TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+        <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
+            <dxlc:LayoutItem Label="Url" >
+                <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
+            </dxlc:LayoutItem>
 
+            <dxlc:LayoutItem Label="Description" >
+                <dxe:TextEdit  Text="{Binding Results.SelectedItem.description}" TextWrapping="Wrap"/>
+            </dxlc:LayoutItem>
+
+            <dxlc:LayoutItem Label="id" >
+                <dxe:TextEdit  Text="{Binding Results.SelectedItem.id}" />
+            </dxlc:LayoutItem>
+        </dxlc:LayoutGroup>
 
         <DockPanel Grid.Row="3" >
 
